; ModuleID = '/home/carl/AnghaBench/xhyve/src/firmware/extr_fbsd.c_addenv.c'
source_filename = "/home/carl/AnghaBench/xhyve/src/firmware/extr_fbsd.c_addenv.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.env = type { i8* }

@envhead = common dso_local global i32 0, align 4
@next = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @addenv to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @addenv(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.env*, align 8
  store i8* %0, i8** %2, align 8
  %4 = call %struct.env* @malloc(i32 8)
  store %struct.env* %4, %struct.env** %3, align 8
  %5 = load i8*, i8** %2, align 8
  %6 = load %struct.env*, %struct.env** %3, align 8
  %7 = getelementptr inbounds %struct.env, %struct.env* %6, i32 0, i32 0
  store i8* %5, i8** %7, align 8
  %8 = load %struct.env*, %struct.env** %3, align 8
  %9 = load i32, i32* @next, align 4
  %10 = call i32 @SLIST_INSERT_HEAD(i32* @envhead, %struct.env* %8, i32 %9)
  ret void
}

declare dso_local %struct.env* @malloc(i32) #1

declare dso_local i32 @SLIST_INSERT_HEAD(i32*, %struct.env*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
